set float to auto, fixes display issue on firefox

--- a/web/tree.css
+++ b/web/tree.css
@@ -6,7 +6,7 @@
 }
 
 .main {
-    float: left;
+    float: auto;
 }
 
 .treeDiv {
